created animated dropbox & uploaded classes

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
             </div>
 
             <div class="option_box">
-                <nav>
+                <nav class="nav">
                     <ul>
-                        <li>Orange</li>
-                        <li>Mango</li>
-                        <li>Banana</li>
-                        <li>Fruit</li>
-                        <li>Mango</li>
-                        <li>Grapes</li>
+                        <li>men's clothing</li>
+                        <li>jewelery</li>
+                        <li>electronics</li>
+                        <li>women's clothing</li>
+                        <li>other</li>
                     </ul>
                 </nav>
             </div>
@@ -41,7 +40,10 @@
         </div>
         <div class="products-container">
             <div class="product-box">
-                
+                <div class="menC"></div>
+                <div class="womenC"></div>
+                <div class="electronics"></div>
+                <div class="jewelery"></div>
             </div>
         </div>
     </main>
