--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-store</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="img/png" href="img/logo.png">
 </head>
 <body>
  
