--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
     </header>
     <!--Main-->
-    <main>
+    <main class="main">
         <!--Animated & Styled "Select-Menu"-->
         <div class="box">
 
             <div class="selected_option">
-                <p class="selected-text">Select Your Option</p>
+                <p class="selected-text">Select Option</p>
                 <div class="arrow"></div>
             </div>
 
