created card-section in another file

--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <p class="storeText">Store</p>
-            <a class="storeCart" href="#"><img src="img/icons8-cart-48.png" alt=""></a>
+            <a class="storeCart" href="../cart/cart.html"><img src="img/icons8-cart-48.png" alt=""></a>
         </div>
     </header>
     <!--Main-->
