created cart animation

--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,10 @@
     <header>
         <div class="header-container">
             <p class="storeText">Store</p>
-            <a class="storeCart" href="../cart/cart.html"><img src="img/icons8-cart-48.png" alt=""></a>
+            <div class="animatedCart">
+                <img src="../main/img/logo.png" class="imgAnimatedCart">
+            </div>
+            <a class="storeCart" href="../cart/cart.html" target="_blank"><img src="img/icons8-cart-48.png" alt=""></a>
         </div>
     </header>
     <!--Main-->
