--- a/cart/cart.html
+++ b/cart/cart.html
@@ -9,7 +9,13 @@
 <body>
     <h1>cart-section</h1>
 
-    <button onclick="backToShop()">Back to Shop</button>
+    <button class="backToShop">Back to Shop</button>
+    <button class="clearStorage">Clear Cart Storage</button>
+
+    <div class="menC"></div>
+    <div class="womenC"></div>
+    <div class="electronics"></div>
+    <div class="jewelery"></div>
 
     <script src="cart-script.js"></script>
 </body>
