--- a/cart/cart.html
+++ b/cart/cart.html
@@ -12,10 +12,13 @@
     <button class="backToShop">Back to Shop</button>
     <button class="clearStorage">Clear Cart Storage</button>
 
-    <div class="menC"></div>
-    <div class="womenC"></div>
-    <div class="electronics"></div>
-    <div class="jewelery"></div>
+    <h1>Cart</h1>
+    <div class="cartContainer">
+        <div class="menC"></div>
+        <div class="womenC"></div>
+        <div class="electronics"></div>
+        <div class="jewelery"></div>
+    </div>
 
     <script src="cart-script.js"></script>
 </body>
