updated products logic

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cart-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <title>cart-section</title>
 </head>
 <body>
     <h1>cart-section</h1>
 
     <button class="backToShop">Back to Shop</button>
-    <button class="clearStorage">Clear Cart Storage</button>
+    <button class="clearStorage">Clear Cart</button>
 
     <h1>Cart</h1>
     <div class="cartContainer">
