created total price counter

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -13,7 +13,10 @@
     <button class="backToShop">Back to Shop</button>
     <button class="clearStorage">Clear Cart</button>
 
-    <h1>Cart</h1>
+    <div class="flex">
+        <h1>Cart</h1>
+        <h1 class="totalPrice"></h1>
+    </div>    
     <div class="cartContainer">
         <div class="menC"></div>
         <div class="womenC"></div>
