start of login form

--- a/main/index.html
+++ b/main/index.html
@@ -6,11 +6,39 @@
     <title>web-store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="img/png" href="img/logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
  
     <!--Header-->
     <header>
+        <!--Login form-->
+        <div class="flexLogin">
+        <div class="main">  	
+		<input type="checkbox" id="chk" aria-hidden="true">
+
+			<div class="signup">
+				<form>
+					<label for="chk" aria-hidden="true">Sign up</label>
+					<input type="text" name="txt" placeholder="User name" required="">
+					<input type="email" name="email" placeholder="Email" required="">
+          <input type="number" name="broj" placeholder="BrojTelefona" required="">
+					<input type="password" name="pswd" placeholder="Password" required="">
+					<button>Sign up</button>
+				</form>
+			</div>
+
+			<div class="login">
+				<form>
+					<label for="chk" aria-hidden="true">Login</label>
+					<input type="email" name="email" placeholder="Email" required="">
+					<input type="password" name="pswd" placeholder="Password" required="">
+					<button>Login</button>
+				</form>
+			</div>
+	    </div>
+    </div>
+    <!--End of login form-->
         <div class="header-container">
             <p class="storeText">Store</p>
             <div class="animatedCart">
@@ -20,7 +48,7 @@
         </div>
     </header>
     <!--Main-->
-    <main class="main">
+    <main class="mainS">
         <!--Animated & Styled "Select-Menu"-->
         <div class="box">
 
