created login form

--- a/main/index.html
+++ b/main/index.html
@@ -10,35 +10,34 @@
 </head>
 <body>
  
-    <!--Header-->
-    <header>
-        <!--Login form-->
+    <!--Login form-->
         <div class="flexLogin">
         <div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
 				<form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-          <input type="number" name="broj" placeholder="BrojTelefona" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Sign up</button>
+					<label class="sign-up-text" for="chk" aria-hidden="true">Sign up</label>
+					<input class="username" type="text" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="txt" placeholder="User name" required="">
+					<input class="email" type="email" name="email" placeholder="Email" required="">
+					<input class="password" type="password" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="pswd" placeholder="Password" required="">
+					<button class="sign-up-btn" onclick="getUserInfo()">Sign up</button>
 				</form>
 			</div>
 
 			<div class="login">
 				<form>
 					<label for="chk" aria-hidden="true">Login</label>
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Login</button>
+					<input class="login-email" type="email" name="email" placeholder="Email" required="">
+					<input class="login-password" type="password" name="pswd" placeholder="Password" required="">
+					<button class="log-in-button" onclick="getUserLoginInfo()">Login</button>
 				</form>
 			</div>
 	    </div>
     </div>
     <!--End of login form-->
+    <!--Header-->
+    <header class="header">
         <div class="header-container">
             <p class="storeText">Store</p>
             <div class="animatedCart">
