--- a/main/index.html
+++ b/main/index.html
@@ -18,9 +18,9 @@
 			<div class="signup">
 				<form onsubmit="event.preventDefault()">
 					<label class="sign-up-text" for="chk" aria-hidden="true">Sign up</label>
-					<input class="username" type="text" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="txt" placeholder="User name" required="">
+					<input class="username" minlength="3" maxlength="20" type="text" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="txt" placeholder="User name" required="">
 					<input class="email" type="email" name="email" placeholder="Email" required="">
-					<input class="password" type="password" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="pswd" placeholder="Password" required="">
+					<input class="password" minlength="4" maxlength="20" type="password" pattern="[A-Za-z0-9]+" title="Only English letters and numbers" name="pswd" placeholder="Password" required="">
 					<button class="sign-up-btn" onclick="getUserInfo()">Sign up</button>
 				</form>
 			</div>
@@ -40,15 +40,21 @@
     <header class="header">
         <div class="header-container">
             <p class="storeText">Store</p>
-            <div class="animatedCart">
-                <img src="../main/img/logo.png" class="imgAnimatedCart">
-            </div>
             <a class="storeCart" href="../cart/cart.html" target="_blank"><img src="img/icons8-cart-48.png" alt=""></a>
+            <div class="username-img">
+                <img src="https://picsum.photos/200/200" class="userImg">
+                <div class="flexSpan">
+                    <span class="userName">
+                    
+                    </span>
+                </div>
+            </div>
         </div>
     </header>
     <!--Main-->
     <main class="mainS">
         <!--Animated & Styled "Select-Menu"-->
+        <div class="flexBoxForAnimation">
         <div class="box">
 
             <div class="selected_option">
@@ -63,12 +69,15 @@
                         <li>jewelery</li>
                         <li>electronics</li>
                         <li>women's clothing</li>
-                        <li>other</li>
                     </ul>
                 </nav>
             </div>
-
+            </div>
+            <div class="animatedCart">
+                <img src="../main/img/logo.png" class="imgAnimatedCart">
+            </div>
         </div>
+        
         <div class="products-container">
             <div class="product-box">
                 <div class="menC"></div>
