fixed bug with folders

--- a/main/index.html
+++ b/main/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-store</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="img/png" href="img/logo.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="img/png" href="./img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -40,7 +40,7 @@
     <header class="header">
         <div class="header-container">
             <p class="storeText">Store</p>
-            <a class="storeCart" href="../cart/cart.html" target="_blank"><img src="img/icons8-cart-48.png" alt=""></a>
+            <a class="storeCart" href="./cart/cart.html" target="_blank"><img src="img/icons8-cart-48.png" alt=""></a>
             <div class="username-img">
                 <img src="https://picsum.photos/200/200" class="userImg">
                 <div class="flexSpan">
@@ -74,7 +74,7 @@
             </div>
             </div>
             <div class="animatedCart">
-                <img src="../main/img/logo.png" class="imgAnimatedCart">
+                <img src="./main/img/logo.png" class="imgAnimatedCart">
             </div>
         </div>
         
@@ -88,6 +88,6 @@
         </div>
     </main>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
