--- a/cart/cart.html
+++ b/cart/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cart-style.css">
+    <link rel="stylesheet" href="./cart-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <title>cart-section</title>
 </head>
@@ -24,6 +24,6 @@
         <div class="jewelery"></div>
     </div>
 
-    <script src="cart-script.js"></script>
+    <script src="./cart-script.js"></script>
 </body>
 </html>
