--- a/cart/cart.html
+++ b/cart/cart.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>cart-section</h1>
+    <h1 class="cart-section">Cart Section</h1>
 
     <button class="backToShop">Back to Shop</button>
     <button class="clearStorage">Clear Cart</button>
