--- a/main/index.html
+++ b/main/index.html
@@ -24,7 +24,6 @@
                     <button class="sign-up-btn" onclick="getUserInfo()">Sign up</button>
                 </form>
             </div>
-
             <div class="login">
                 <form onsubmit="event.preventDefault()">
                     <label for="chk" aria-hidden="true"><p class="login-text">Login</p></label>
@@ -87,6 +86,32 @@
             </div>
         </div>
     </main>
+    <!-- Footer -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>Contacts</h3>
+      <p>Email: <a href="mailto:kopakmaksym@gmail.com">kopakmaksym@gmail.com</a></p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Socials</h3>
+      <ul class="social-links">
+        <li><a href="https://t.me/RidEr234" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/telegram.svg" alt="Telegram"></a></li>
+        <li><a href="https://www.instagram.com/maks.kopak" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram"></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook"></a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h3>Information</h3>
+      <ul>
+        <li><a target="_blank" href="../Rules/rules.html">Rules</a></li>
+        <li><a target="_blank" href="../Rules/rules.html">Rules of Usage</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
     <script src="./index.js"></script>
 </body>
 </html>
