edited cart section styles

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -10,12 +10,14 @@
 <body>
     <h1 class="cart-section">Cart Section</h1>
 
-    <button class="backToShop">Back to Shop</button>
-    <button class="clearStorage">Clear Cart</button>
-
+    <div class="button-box-holder">
+        <button class="backToShop">Back to Shop</button>
+        <button class="clearStorage">Clear Cart</button>
+    </div>
     <div class="flex">
         <h1>Cart</h1>
         <h1 class="totalPrice"></h1>
+        <button class="order-btn">Order</button>
     </div>    
 
     <div class="cartContainer">
