little code changes

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -17,7 +17,7 @@
     <div class="flex">
         <h1>Cart</h1>
         <h1 class="totalPrice"></h1>
-        <button class="order-btn">Order</button>
+        <button class="order-btn" onclick="window.location.href='../order-btn/orderBtn.html'">Order</button>
     </div>    
 
     <div class="cartContainer">
