--- a/order-btn/orderBtn.html
+++ b/order-btn/orderBtn.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="placeholder-container">
-    <h1>Order Button Coming Soon!</h1>
+    <h1>Order Functionality Coming Soon!</h1>
     <p>This button is not active yet. Ordering functionality is coming soon.</p>
     <a href="../cart/cart.html" class="back-btn">Back to Cart</a>
     <a href="../main/index.html" class="backToShop">Back to Shop</a>
