edited information containing

--- a/main/index.html
+++ b/main/index.html
@@ -107,7 +107,7 @@
       <h3>Information</h3>
       <ul>
         <li><a target="_blank" href="../Rules/rules.html">Rules</a></li>
-        <li><a target="_blank" href="../Rules/rules.html">Rules of Usage</a></li>
+        <li><a target="_blank" href="../Rules/rules.html">Terms of Use</a></li>
       </ul>
     </div>
   </div>
