edited rules & started creating small-info field

--- a/Rules/rules.html
+++ b/Rules/rules.html
@@ -26,7 +26,7 @@
     <p>We reserve the right to update or modify these Terms of Use at any time without prior notice.</p>
 
     <h2>5. Contact</h2>
-    <p>If you have any questions, you may contact us at: support@store.com</p>
+    <p>If you have any questions, you may contact us at: riderworkable1234@gmail.com</p>
   </main>
 
   <footer>
