edited dropbox for small section

--- a/main/index.html
+++ b/main/index.html
@@ -78,8 +78,8 @@
             <!--Small info container-->
             <div class="user-profile">
                 <div class="profile-header">
-                    <img src="https://via.placeholder.com/40" alt="avatar" class="user-small-section-avatar">
-                    <span class="username">User123</span>
+                    <img src="https://picsum.photos/200/200" alt="avatar" class="user-small-section-avatar">
+                    <span class="user-small-section-name">User123</span>
                 </div>
                 <div class="profile-info">
                     <p>Кількість товарів: <span class="count">3</span></p>
