--- a/main/index.html
+++ b/main/index.html
@@ -82,8 +82,8 @@
                     <span class="user-small-section-name">User123</span>
                 </div>
                 <div class="profile-info">
-                    <p>Кількість товарів: <span class="count">3</span></p>
-                    <p>Загальна ціна: <span class="price">$120</span></p>
+                    <p>Quantity Of Products <span class="count">0</span></p>
+                    <p>Email: <span class="price"></span></p>
                 </div>
             </div>
         </div>
